--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
+displayName=OSRS Delivery Service
+author=JerryVonJingles
 support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+description=Runescape's very own delivery service
+tags=delivery, service, items
+plugins=com.OSRSDelivery.OSRSDeliveryPlugin
